force-app/main/default/objects/Integration_Rule__mdt/fields/Success_notification_subject__c.field-meta.xml
<CustomField>
    <fullName>Success_notification_subject__c</fullName>
    <label>Success notification subject</label>
    <type>TextArea</type>
</CustomField>