force-app/main/default/objects/Integration_Rule__mdt/fields/Tool_used__c.field-meta.xml
<CustomField>
    <fullName>Tool_used__c</fullName>
    <label>Tool used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>IB</fullName>
                <default>true</default>
                <label>IB</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Talend</fullName>
            </value>
            <value>
                <fullName>Workato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>